--- a/src/main/resources/templates/settings.html
+++ b/src/main/resources/templates/settings.html
@@ -35,6 +35,10 @@
 
 </section>
 
+</section>
+<section class="barMagenta">
+    <img class="barMagentaImage" th:src="@{/images/imagesTemplates/barMagentaLight.jpg}">
+</section>
 
 <section class="devicesSection">
 
@@ -94,6 +98,15 @@
 
 
 </section>
+
+<section class="barMagenta">
+    <img class="barMagentaImageReverse" th:src="@{/images/imagesTemplates/barMagentaLight.jpg}">
+    <footer>
+        <p> fefe</p>
+
+    </footer>
+</section>
+
 
 </body>
 </html>
