--- a/src/main/resources/static/stylesTemplate.css
+++ b/src/main/resources/static/stylesTemplate.css
@@ -20,19 +20,20 @@ body {
     overflow: hidden;
     cursor: pointer;
 
-    background:
-            linear-gradient(
-                    to right,
-                    black 0%,
-                    black 5%,
-                    rgba(0, 0, 0, 0.84) 20%,
-                    transparent 100%
-            ),
-            url('images/imagesTemplates/remote.png') center/cover no-repeat;
+    background: linear-gradient(
+            to bottom,
+            rgba(0,0,0,0) 60%,   /* transparent until halfway */ rgba(0, 0, 0, 0.48) 75%, /* fade builds up */ rgb(0, 0, 0) 100% /* solid dark at bottom */
+    ),
+    url('images/imagesTemplates/remote.png');
 
     animation: fadeIn 1s ease forwards;
 }
-
+.barMagenta {
+    margin-bottom: -10%;
+}
+.barMagentaImage {
+    width: 100%;
+}
 .hero-subtitle {
     opacity: 0.9;
 }
