--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -5,6 +5,6 @@
     <title>ERROR</title>
 </head>
 <body>
-
+    <h1> Whoops! An error has accoured please go back and try again</h1>
 </body>
 </html>
