--- a/src/main/resources/static/settingsStyles.css
+++ b/src/main/resources/static/settingsStyles.css
@@ -143,7 +143,7 @@ body {
             to bottom,
             rgba(0,0,0,0) 60%,   /* transparent until halfway */ rgba(0, 0, 0, 0.48) 75%, /* fade builds up */ rgb(0, 0, 0) 100% /* solid dark at bottom */
     ),
-    url('images/imagesTemplates/moviesBackground.jpg');
+    url('https://raw.githubusercontent.com/nikholt1/HTasset/main/loginImage/loginImage.jpg');
     background-size: cover;
 
     background-position: center;
