--- a/src/main/resources/static/stylesTemplate.css
+++ b/src/main/resources/static/stylesTemplate.css
@@ -16,15 +16,17 @@ body {
 .HeroSection {
     position: relative;
     width: 100%;
-    height: 50vh;            /* section height */
+    height: 50vh;
     overflow: hidden;
     cursor: pointer;
 
     background: linear-gradient(
             to bottom,
-            rgba(0,0,0,0) 60%,   /* transparent until halfway */ rgba(0, 0, 0, 0.48) 75%, /* fade builds up */ rgb(0, 0, 0) 100% /* solid dark at bottom */
+            rgba(0,0,0,0) 60%,
+            rgba(0, 0, 0, 0.48) 75%,
+            rgb(0, 0, 0) 100%
     ),
-    url('images/imagesTemplates/remote.png');
+    url('https://raw.githubusercontent.com/nikholt1/HTasset/main/loginImage/loginImage.jpg');
 
     animation: fadeIn 1s ease forwards;
 }
