--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,36 +1,31 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Login</title>
-    <link rel="stylesheet" th:href="@{/css/login.css}">
+    <title>HomeTheater Login</title>
+    <link rel="stylesheet" th:href="@{/login.css}">
 </head>
 <body>
+<section class="login-section" style="background-image: url('https://raw.githubusercontent.com/nikholt1/HTasset/main/loginImage/loginImage.jpg');">
 
-<div class="login-container">
-    <h2>Sign In</h2>
-
-    <form th:action="@{/login}" method="post">
-        <div class="form-group">
-            <label>Username</label>
-            <input type="text" name="username" required>
+    <div class="login-wrapper">
+        <!-- Logo centered above the login container -->
+        <div class="logo-container">
+            <img src="https://raw.githubusercontent.com/nikholt1/HTasset/main/loginImage/logo.png" alt="Logo" class="login-logo">
         </div>
 
-        <div class="form-group">
-            <label>Password</label>
-            <input type="password" name="password" required>
+        <div class="login-container">
+            <h1>Login</h1>
+            <form th:action="@{/login}" method="post">
+                <input type="text" name="username" id="username" required placeholder="Enter Username" />
+                <input type="password" name="password" id="password" required placeholder="Enter Password" />
+                <button type="submit">Login</button>
+            </form>
+            <p th:if="${param.error}">Invalid username or password.</p>
+            <p th:if="${param.logout}">You have been logged out.</p>
         </div>
+    </div>
+</section>
 
-        <button type="submit">Login</button>
-
-        <div th:if="${param.error}" class="error">
-            Invalid username or password
-        </div>
-        <div th:if="${param.logout}" class="logout">
-            You have been logged out
-        </div>
-    </form>
-</div>
 
 </body>
 </html>
