implementation data structure for default video folders. + profile configuration layout and endpoints

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>ERROR</title>
+    <link rel="icon" type="image/png" th:href="@{/images/imagesTemplates/R.png}">
+
 </head>
 <body>
     <h1> Whoops! An error has accoured please go back and try again</h1>
