--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,6 +3,8 @@
 <head>
     <title>HomeTheater Login</title>
     <link rel="stylesheet" th:href="@{/login.css}">
+    <link rel="icon" type="image/png" th:href="@{/images/imagesTemplates/R.png}">
+
 </head>
 <body>
 <section class="login-section" style="background-image: url('https://raw.githubusercontent.com/nikholt1/HTasset/main/loginImage/loginImage.jpg');">
