--- a/src/main/resources/templates/profile_add.html
+++ b/src/main/resources/templates/profile_add.html
@@ -5,6 +5,8 @@
 
     <meta charset="UTF-8">
     <title>Add Profile</title>
+    <link rel="icon" type="image/png" th:href="@{/images/imagesTemplates/R.png}">
+
 </head>
 <body>
 <form th:action="@{/profiles/addUser}" th:object="${user}" method="post">
