--- a/src/main/resources/templates/settings.html
+++ b/src/main/resources/templates/settings.html
@@ -7,20 +7,18 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" th:href="@{/images/imagesTemplates/R.png}">
 
 </head>
 <body>
 
 <nav class="navbar">
-    <!-- Left links -->
     <div class="nav-left">
         <a class="navItem" th:href="@{/videos/browser}">Browser</a>
-        <!-- <a class="navItem" th:href="@{/videos/settings}">Settings</a> -->
     </div>
 
-    <!-- Right profile dropdown -->
     <div class="profile-dropdown">
-        <img th:src="@{'/' + ${currentUser.profilePicturePath}}" alt="Profile Picture"
+        <img th:src="@{${currentUser.profilePicturePath}}" alt="Profile Picture"
              class="profile-pic" id="profilePic">
 
         <div class="dropdown-menu" id="dropdownMenu">
