--- a/src/main/resources/static/stylesTemplate.css
+++ b/src/main/resources/static/stylesTemplate.css
@@ -77,7 +77,9 @@ body {
     padding: 2rem;
     color: white;
 }
-
+.empty-message {
+    text-align: center;
+}
 
 .welcome {
     margin-top: -50px;
@@ -407,4 +409,6 @@ h1 {
 .add-profile-btn:hover {
     background: #357ab7;
 }
+
+
 
