--- a/src/main/resources/templates/browser.html
+++ b/src/main/resources/templates/browser.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" th:href="@{/images/imagesTemplates/R.png}">
 
 </head>
 <body>
@@ -26,7 +27,7 @@
 
     <!-- Profile Dropdown -->
     <div class="profile-dropdown">
-        <img th:src="@{'/' + ${currentUser.profilePicturePath}}" alt="Profile Picture"
+        <img th:src="@{${currentUser.profilePicturePath}}" alt="Profile Picture"
              class="profile-pic" id="profilePic">
 
         <div class="dropdown-menu" id="dropdownMenu">
@@ -290,7 +291,7 @@
                     <img th:if="${item.startsWith('Horror')}" th:src="@{/images/imagesTemplates/horror.png}" alt="Horror Image">
                     <img th:if="${item.startsWith('Crime')}" th:src="@{/images/imagesTemplates/crime.png}" alt="Crime Image">
                     <img th:if="${item.startsWith('Action')}" th:src="@{/images/imagesTemplates/action.png}" alt="Action Image">
-                    <img th:if="${item.startsWith('Adventure')}" th:src="@{/images/imagesTemplates/Adventure.png}" alt="Adventure Image">
+                    <img th:if="${item.startsWith('Adventure')}" th:src="@{/images/imagesTemplates/adventure.png}" alt="Adventure Image">
                     <img th:if="${item.startsWith('Comedy')}" th:src="@{/images/imagesTemplates/comedy.png}" alt="Comedy Image">
                     <img th:if="${item.startsWith('Documentary')}" th:src="@{/images/imagesTemplates/documentary.png}" alt="Documentary Image">
                     <img th:if="${item.startsWith('Thriller')}" th:src="@{/images/imagesTemplates/thriller.png}" alt="Thriller Image">
