--- a/src/main/resources/templates/browser.html
+++ b/src/main/resources/templates/browser.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" th:href="@{/images/imagesTemplates/R.png}">
+    <link rel="icon" type="image/png" th:href="@{https://raw.githubusercontent.com/nikholt1/HTasset/refs/heads/main/storedAssets/R.png}">
 
 </head>
 <body>
@@ -47,7 +47,7 @@
 <section th:if="${currentPath == ''}" class="HeroSection">
 
 
-    <img class="refrac-image" th:src="@{/images/imagesTemplates/Refractio-removebg-preview.png}" alt="Refractio">
+    <img class="refrac-image" th:src="@{https://raw.githubusercontent.com/nikholt1/HTasset/refs/heads/main/loginImage/logo.png}" alt="Refractio">
     <h2 class="welcome">Welcome to Refract</h2>
     <p class="welcomeParagraph">Stream, cast or simply watch anything you have stored</p>
 </section>
