--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,18 +3,18 @@
 <head>
     <title>HomeTheater Login</title>
     <link rel="stylesheet" th:href="@{/login.css}">
-    <link rel="icon" type="image/png" th:href="@{/images/imagesTemplates/R.png}">
+    <link rel="icon" type="image/png" th:href="@{https://raw.githubusercontent.com/nikholt1/HTasset/refs/heads/main/storedAssets/R.png}">
 
 </head>
 <body>
 <section class="login-section" style="background-image: url('https://raw.githubusercontent.com/nikholt1/HTasset/main/loginImage/loginImage.jpg');">
 
     <div class="login-wrapper">
-        <!-- Logo centered above the login container -->
+        <!-- Logo centered above the login container
         <div class="logo-container">
             <img src="https://raw.githubusercontent.com/nikholt1/HTasset/main/loginImage/logo.png" alt="Logo" class="login-logo">
         </div>
-
+-->
         <div class="login-container">
             <h1>Login</h1>
             <form th:action="@{/login}" method="post">
