--- a/src/main/resources/static/login.css
+++ b/src/main/resources/static/login.css
@@ -5,7 +5,8 @@ body, html {
     padding: 0;
     height: 100%;
     font-family: Arial, sans-serif;
-    background: url('static/images/imagesTemplates/moviesBackground.jpg') no-repeat center center fixed;
+    background-color: black;
+    background: url('https://github.com/nikholt1/HTasset/blob/main/loginImage/loginImage.jpg') no-repeat center center fixed;
     background-size: cover;
 }
 
