--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>ERROR</title>
-    <link rel="icon" type="image/png" th:href="@{/images/imagesTemplates/R.png}">
+    <link rel="icon" type="image/png" th:href="@{https://raw.githubusercontent.com/nikholt1/HTasset/refs/heads/main/storedAssets/R.png}">
 
 </head>
 <body>
