--- a/src/main/resources/templates/profile_add.html
+++ b/src/main/resources/templates/profile_add.html
@@ -5,24 +5,36 @@
 
     <meta charset="UTF-8">
     <title>Add Profile</title>
-    <link rel="icon" type="image/png" th:href="@{/images/imagesTemplates/R.png}">
+    <link rel="icon" type="image/png" th:href="@{https://raw.githubusercontent.com/nikholt1/HTasset/refs/heads/main/storedAssets/R.png}">
+    <link rel="stylesheet" th:href="@{/manage_account_styles.css}">
 
 </head>
 <body>
-<form th:action="@{/profiles/addUser}" th:object="${user}" method="post">
-    <label for="username">Username:</label>
-    <input type="text" id="username" th:field="*{username}" required/>
 
-    <br/><br/>
+<section class="barMagenta">
+    <!-- <img class="barMagentaImage" th:src="@{/images/imagesTemplates/barMagentaLight.jpg}"> -->
+    <img class="barMagentaImage" th:src="@{https://raw.githubusercontent.com/nikholt1/HTasset/refs/heads/main/browser/barMagenta.png}">
 
-    <label for="profilePicture">Choose a profile picture:</label>
-    <select id="profilePicture" th:field="*{profilePicturePath}">
-        <option th:each="img : ${images}" th:value="${img}" th:text="${img}"></option>
-    </select>
+</section>
+<div class="addUser-container">
+    <h2>Add New Profile</h2>
 
-    <br/><br/>
+    <form th:action="@{/profiles/addUser}" th:object="${user}" method="post">
+        <label for="username">Username:</label>
+        <input type="text" id="username" th:field="*{username}" required/>
 
-    <button type="submit">Add Profile</button>
-</form>
+        <label for="profilePicture">Choose a profile picture:</label>
+        <select id="profilePicture" th:field="*{profilePicturePath}">
+            <option th:each="img : ${images}" th:value="${img}" th:text="${img}"></option>
+        </select>
+
+        <button type="submit">Add Profile</button>
+    </form>
+</div>
+<section class="barMagenta">
+    <img class="barMagentaImageReverse" th:src="@{/images/imagesTemplates/barMagentaLight.jpg}">
+
+</section>
+
 </body>
 </html>
