--- a/src/main/resources/templates/profiles.html
+++ b/src/main/resources/templates/profiles.html
@@ -8,14 +8,12 @@
 
     <meta charset="UTF-8">
     <title>Refract profiles</title>
-    <link rel="icon" type="image/png" th:href="@{/images/imagesTemplates/R.png}">
+    <link rel="icon" type="image/png" th:href="@{https://raw.githubusercontent.com/nikholt1/HTasset/refs/heads/main/storedAssets/R.png}">
 
     <link rel="stylesheet" th:href="@{/stylesTemplate.css}">
 </head>
 <body>
-<div class="add-profile-container">
-    <button onclick="window.location.href='/profiles/manageAccount'" class="add-profile-btn">Manage Account</button>
-</div>
+
 <div class="profiles_wrapper">
 
     <div class="profiles_container">
@@ -37,7 +35,9 @@
         <div class="add-profile-container">
             <button onclick="window.location.href='/profiles/add'" class="add-profile-btn">Add New Profile</button>
         </div>
-
+        <div class="add-profile-container">
+            <button onclick="window.location.href='/profiles/manageAccount'" class="add-profile-btn">Manage Account</button>
+        </div>
     </div>
 
 </div>
