--- a/src/main/resources/templates/profile_add.html
+++ b/src/main/resources/templates/profile_add.html
@@ -32,7 +32,7 @@
     </form>
 </div>
 <section class="barMagenta">
-    <img class="barMagentaImageReverse" th:src="@{/images/imagesTemplates/barMagentaLight.jpg}">
+    <img class="barMagentaImageReverse" th:src="@{https://raw.githubusercontent.com/nikholt1/HTasset/refs/heads/main/browser/barMagenta.png}">
 
 </section>
 
