--- a/src/main/resources/templates/browser.html
+++ b/src/main/resources/templates/browser.html
@@ -27,7 +27,7 @@
 
     <!-- Profile Dropdown -->
     <div class="profile-dropdown">
-        <img th:src="@{${currentUser.profilePicturePath}}" alt="Profile Picture"
+        <img th:src="@{${'/profileImages/' + currentUser.profilePicturePath}}" alt="Profile Picture"
              class="profile-pic" id="profilePic">
 
         <div class="dropdown-menu" id="dropdownMenu">
